--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>RoutingApp</title>
+  <title>Feili Electron</title>
   <base href="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/images/icon.ico">
@@ -110,5 +110,5 @@
     </div>
   </app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime-es2015.a1ac991fc00ebf39524f.js" type="module"></script><script src="runtime-es5.a1ac991fc00ebf39524f.js" nomodule="" defer=""></script><script src="polyfills-es5.8139562032f54e8f194a.js" nomodule="" defer=""></script><script src="polyfills-es2015.24ea368e110f7f07889e.js" type="module"></script><script src="main-es2015.201664ab29bbf9bf9074.js" type="module"></script><script src="main-es5.201664ab29bbf9bf9074.js" nomodule="" defer=""></script></body>
+<script src="runtime-es2015.a1ac991fc00ebf39524f.js" type="module"></script><script src="runtime-es5.a1ac991fc00ebf39524f.js" nomodule="" defer=""></script><script src="polyfills-es5.8139562032f54e8f194a.js" nomodule="" defer=""></script><script src="polyfills-es2015.24ea368e110f7f07889e.js" type="module"></script><script src="main-es2015.11b85c5b06248dfb9957.js" type="module"></script><script src="main-es5.11b85c5b06248dfb9957.js" nomodule="" defer=""></script></body>
 </html>
